2015-11-26  Miloslav Trmač  <mitr@redhat.com>

	* src/utils.py (log_exception): New parameter thread_name.  All users
	changed.

	* src/utils.py (WorkerQueueOrphanedError, WorkerQueue): New classes.
	(WorkerThread.run): Mark input queues as orphaned. Be fairly silent
	about failures sending EOF to orphaned queues.
	(run_worker_threads): Silently ignore failures sending EOF to orphaned
	queues.
	(log_exception): Recognize WorkerQueueOrphanedError.
	* src/bridge.py (SignRPMsRequestHandler.post_request_phase)
	* src/server.py (cmd_sign_rpms): Use utils.WorkerQueue.

2015-11-18  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.101.
	* NEWS: Update.

	* src/bridge.py (SignRPMsReadRequestThread.eof): Remove.
	(SignRPMsReadRequestThread.__init__)
	(SignRPMsKojiRequestThread.__init__)
	(SignRPMsKojiRequestThread._real_run): Use None instead of
	SignRPMsReadRequestThread.eof as the end-of-stream marker.
	(SignRPMsReadReplyThread.eof): Remove.
	(SignRPMsReadReplyThread.__init__)
	(SignRPMsKojiReplyThread.__init__)
	(SignRPMsKojiReplyThread._real_run): Use None instead of
	SignRPMsReadReplyThread.eof as the end-of-stream marker.

	* src/bridge.py (SignRPMsKojiRequestThread)
	(SignRPMsKojiReplyThread): New classes, split from...
	(SignRPMsKojiThread): ... this.
	(SignRPMsKojiRequestThread._real_run)
	(SignRPMsSendRequestThread._real_run): Rely on utils.WorkerThread to
	put the end-of-stream None value to the queue when done.
	(SignRPMsRequestHandler.post_request_phase): Use
	SignRPMsKojiRequestThread and SignRPMsKojiReplyThread instead of the
	shared SignRPMsKojiThread.

	* src/utils.py (WorkerThread.__init__): New member
	ignored_exception_types.
	(WorkerThread.run): Log an uncaught exception in self._real_run()
	immediately, using self.ignored_exception_types.
	(run_worker_threads): Initialize thread's ignored_exception_types.

2013-02-26  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (KojiClient.add_signature): Raise an exception instead